fix: alignment

--- a/src/components/SideBar/ItemDrawer/ItemDrawer.css
+++ b/src/components/SideBar/ItemDrawer/ItemDrawer.css
@@ -9,7 +9,6 @@
 
 .ItemDrawer .ui.grid.asset-grid .column {
   padding: 4px;
-  padding-bottom: 10px;
 }
 
 .ItemDrawer .ui.grid.asset-grid.item-grid .column {
@@ -19,10 +18,6 @@
 .ItemDrawer .ui.grid.asset-grid.item-list .column {
   padding-left: 0px;
   padding-right: 0px;
-}
-
-.ItemDrawer .ui.grid > .row {
-  justify-content: space-between;
 }
 
 .ItemDrawer .ui.grid.asset-grid.item-grid .row .column:first-child {
